--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,47 @@
 spring.application.name=Achieve.io
+
+# ===================================
+# DATABASE CONNECTION
+# ===================================
+spring.datasource.url=jdbc:postgresql://localhost:5432/achieveio
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===================================
+# JPA / HIBERNATE
+# ===================================
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
+
+# ===================================
+# FLYWAY MIGRATIONS
+# ===================================
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+
+# ===================================
+# JWT CONFIGURATION
+# ===================================
+jwt.secret=${JWT_SECRET}
+jwt.expiration=86400000
+
+# ===================================
+# SERVER
+# ===================================
+server.port=8080
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=on_param
+server.error.include-exception=false
+
+# ===================================
+# LOGGING
+# ===================================
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.ddg.achieveio=DEBUG
