Davi - Entidades faltantes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,5 @@ server.error.include-exception=false
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.com.ddg.achieveio=DEBUG
+
+api.security.token.secret=jwt_secret_jwt_secret_jwt_secret_jwt_secret_jwt_secret_jwt_secret_
